--- a/app/src/main/res/layout/activity_bite_scan_input.xml
+++ b/app/src/main/res/layout/activity_bite_scan_input.xml
@@ -63,10 +63,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="20dp"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="100dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Signs: "
@@ -75,6 +76,29 @@
 
             <Spinner
                 android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="24sp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Symptoms: "
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <Spinner
+                android:id="@+id/spinner2"
                 android:layout_width="match_parent"
                 android:layout_height="24sp"
                 android:layout_centerHorizontal="true"
