--- a/app/src/main/res/layout/content_nav_drawer.xml
+++ b/app/src/main/res/layout/content_nav_drawer.xml
@@ -8,23 +8,44 @@
     tools:context=".NavDrawer"
     tools:showIn="@layout/app_bar_nav_drawer">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:background="@drawable/logobyteme2"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="676dp"
+            android:layout_above="@+id/adView"
+            android:layout_marginBottom="6dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <TextView
+            <ImageView
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:background="@drawable/logobyteme2" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="A MOBILE-BASED FIRST AID GUIDE TO INSECT BITES"
+                android:textSize="20dp" />
+
+        </LinearLayout>
+
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="A MOBILE-BASED FIRST AID GUIDE TO INSECT BITES"
-            android:textSize="20dp" />
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
 
-    </LinearLayout>
+        </com.google.android.gms.ads.AdView>
+
+    </RelativeLayout>
+
 </ScrollView>
