--- a/app/src/release/res/values/google_maps_api.xml
+++ b/app/src/release/res/values/google_maps_api.xml
@@ -1,20 +1,20 @@
-<resources>
-    <!--
-    TODO: Before you release your application, you need a Google Maps API key.
+package com.example.adefault.bytemeV3;
 
-    To do this, you can either add your release key credentials to your existing
-    key, or create a new key.
+import android.app.ProgressDialog;
+import android.content.Context;
+import android.content.Intent;
+import android.os.AsyncTask;
+import android.util.Log;
+import android.view.View;
 
-    Note that this file specifies the API key for the release build target.
-    If you have previously set up a key for the debug target with the debug signing certificate,
-    you will also need to set up a key for your release certificate.
-
-    Follow the directions here:
-
-    https://developers.google.com/maps/documentation/android/signup
-
-    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
-    string in this file.
-    -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
-</resources>
+import com.example.adefault.bytemeV3.Nodes.SignsAndSymptomsNode;
+import com.example.adefault.bytemeV3.databaseObjects.BugsListResponseV1;
+import com.example.adefault.bytemeV3.databaseObjects.BugsListResponse;
+import com.google.api.gax.core.FixedCredentialsProvider;
+import com.google.auth.oauth2.GoogleCredentials;
+import com.google.cloud.automl.v1beta1.AnnotationPayload;
+import com.google.cloud.automl.v1beta1.ExamplePayload;
+import com.google.cloud.automl.v1beta1.Image;
+import com.google.cloud.automl.v1beta1.ModelName;
+import com.google.cloud.automl.v1beta1.PredictResponse;
+i
