--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,6 +113,12 @@
             android:textColor="#313b32"
             android:text="SIGN UP"/>
 
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/google_icon"/>
+
     </LinearLayout>
 
 </RelativeLayout>
