--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#262626"
-    tools:context=".InsectScan">
+    tools:context=".Result">
 
     <LinearLayout
         android:id="@+id/linear1"
@@ -92,7 +92,7 @@
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="DIY How to get rid." />
+            android:text="DIY How to get rid" />
 
     </LinearLayout>
 
