--- a/app/src/main/res/layout/activity_scan_mode_form.xml
+++ b/app/src/main/res/layout/activity_scan_mode_form.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#262626"
+    android:background="@color/vampire"
+    android:id="@+id/rootLayout"
     tools:context=".ScanModeForm">
 
     <LinearLayout
