--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,14 +16,14 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="186dp"
-            android:layout_height="186dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
             app:srcCompat="@drawable/bytemelogo" />
 
         <LinearLayout
-            android:layout_height="150dp"
+            android:layout_height="130dp"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:gravity="center">
@@ -52,7 +52,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_height="130dp"
+                android:layout_height="100dp"
                 android:layout_width="250dp"
                 android:orientation="vertical"
                 android:layout_gravity="center">
@@ -94,30 +94,61 @@
             android:text="Login"
             android:layout_alignParentBottom="true"/>
 
+        <LinearLayout
+            android:layout_width="280dp"
+            android:layout_height="11dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="90dp"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="5dp"
+                android:background="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/textView37"
+                android:layout_width="115dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="-5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="OR CONNECT WITH"
+                android:textColor="@android:color/background_dark"
+                android:textSize="10sp" />
+
+            <View
+                android:layout_width="90dp"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="5dp"
+                android:background="@android:color/darker_gray" />
+
+        </LinearLayout>
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/signInGoogleButton"
+            android:layout_width="167dp"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:layout_marginTop="15dp"
             android:id="@+id/dontHaveAccountTextView"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:text="Don't have an account yet?"
             android:textColor="#000000"/>
 
         <Button
-            android:background="@android:color/transparent"
-            android:layout_height="36dp"
-            android:layout_width="122dp"
-            android:layout_marginTop="20dp"
             android:id="@+id/signUpButton"
-            android:textColor="#313b32"
-            android:text="SIGN UP"/>
-
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/google_icon"/>
+            android:layout_width="122dp"
+            android:layout_height="36dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/transparent"
+            android:text="SIGN UP"
+            android:textColor="#313b32" />
 
     </LinearLayout>
 
