--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,67 +5,93 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+  <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:tools="http://schemas.android.com/tools"
+      android:id="@+id/map"
+      android:name="com.google.android.gms.maps.SupportMapFragment"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      tools:context=".MapsActivity" />
+
+  <ImageView
+      android:layout_width="40dp"
+      android:layout_height="40dp"
+      android:layout_marginRight="10dp"
+      android:layout_marginTop="10dp"
+      android:scaleType="centerCrop"
+      android:layout_gravity="right"
+      android:id="@+id/ic_gps"
+      android:src="@drawable/ic_gps_fixed_black_24dp"/>
+
+  <android.support.v4.widget.NestedScrollView
+      android:id="@+id/bottom_sheet"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@android:color/white"
+      android:clipToPadding="true"
+      android:layout_alignParentBottom="true"
+      android:orientation="vertical"
+      app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MapsActivity" />
-
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:scaleType="centerCrop"
-        android:layout_gravity="right"
-        android:id="@+id/ic_gps"
-        android:src="@drawable/ic_gps_fixed_black_24dp"/>
-
-
-
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/bottom_sheet"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:clipToPadding="true"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+        android:gravity="top|fill_vertical"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="top|fill_vertical"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:padding="20dp">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/pest_services_list"
-                android:layout_width="match_parent"
+            <SeekBar
+                android:id="@+id/radius_seekbar"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:divider="#00000000" />
+                android:max="10"
+                android:maxHeight="3dp"
+                android:minHeight="3dp"
+                android:progressDrawable="@drawable/volume_seekbar"
+                android:progress="10"
+                android:thumbTint="@color/vampire"/>
+
+            <TextView
+                android:id="@+id/current_radius"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="10 km"
+                android:textColor="@color/vampire"/>
 
         </LinearLayout>
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/pest_services_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:divider="#00000000" />
 
-    </android.support.v4.widget.NestedScrollView>
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/show_list_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:textAlignment="textStart"
-        android:padding="10dp"
-        android:background="@drawable/white_border"
-        android:textColor="@color/colorPrimaryDark"
-        android:text="Show list"
-        tools:ignore="RtlCompat" />
+
+  </android.support.v4.widget.NestedScrollView>
+
+  <Button
+      android:id="@+id/show_list_button"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom"
+      android:textAlignment="textStart"
+      android:padding="10dp"
+      android:background="@drawable/white_border"
+      android:textColor="@color/colorPrimaryDark"
+      android:text="Show list"
+      tools:ignore="RtlCompat" />
 
 
 </android.support.design.widget.CoordinatorLayout>
