--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,150 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/uibg"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".SignUp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="0dp" />
-    android:layout_alignParentTop="true"
-    android:layout_marginTop="0dp"
-    android:gravity="center"
-    android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="137dp"
-        android:layout_height="133dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="300dp"
-        android:layout_marginLeft="125dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="20dp"
         app:srcCompat="@drawable/bytemelogo" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="175dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="208dp"
-        android:gravity="center"
-        android:orientation="horizontal" />
+    <EditText
+        android:id="@+id/emailEditText"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
+        android:hint="User Name"
+        android:inputType="textPersonName"
+        android:textColor="#313b32"
+        android:textColorHint="#869299"
+        tools:ignore="HardcodedText,RtlSymmetry" />
 
-    <LinearLayout
-        android:layout_width="36dp"
-        android:layout_height="150dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="57dp"
-        android:layout_marginLeft="57dp"
-        android:layout_marginBottom="197dp"
-        android:orientation="vertical">
+    <EditText
+        android:id="@+id/passwordEditText"
+        android:layout_width="300dp"
+        android:layout_height="45dp"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:textColor="#313b32"
+        android:textColorHint="#869299"
+        tools:ignore="HardcodedText,TextFields" />
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="20dp"
-            android:layout_height="27dp"
-            android:layout_gravity="center"
-            android:layout_margin="12dp"
-            app:srcCompat="@drawable/usericon" />
+    <EditText
+        android:id="@+id/confirmPassword"
+        android:layout_width="300dp"
+        android:layout_height="46dp"
+        android:hint="Confirm Password"
+        android:inputType="textPassword"
+        android:textColor="#313b32"
+        android:textColorHint="#869299"
+        tools:ignore="HardcodedText" />
 
-        <ImageView
-            android:id="@+id/imageView11"
-            android:layout_width="20dp"
-            android:layout_height="27dp"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            app:srcCompat="@drawable/emailicon" />
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="27dp"
-            android:layout_gravity="center"
-            android:layout_margin="14dp"
-            app:srcCompat="@drawable/passwordicon" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="250dp"
-        android:layout_height="150dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="220dp"
-        android:orientation="vertical">
-
-        <EditText
-            android:id="@+id/userNameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginRight="12dp"
-            android:hint="User Name"
-            android:inputType="textPersonName"
-            android:paddingLeft="5dp"
-            android:textColor="#313b32"
-            android:textColorHint="#869299" />
-
-        <EditText
-            android:id="@+id/emailEditText"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="12dp"
-            android:hint="Email"
-            android:inputType="textPassword"
-            android:paddingLeft="5dp"
-            android:textColor="#313b32"
-            android:textColorHint="#869299" />
-
-        <EditText
-            android:id="@+id/passwordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="46dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginRight="12dp"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:paddingLeft="5dp"
-            android:textColor="#313b32"
-            android:textColorHint="#869299" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/error_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#ff0000" />
 
     <Button
         android:background="@drawable/roundbtn2"
         android:layout_height="44dp"
         android:layout_width="200dp"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/signUpButton"
+        android:id="@+id/signUp"
         android:textColor="#000000"
-        android:text="Sign Up"
-        android:layout_marginTop="400dp"/>
-
-    <TextView
-        android:id="@+id/dontHaveAccountTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="450dp"
-        android:gravity="center"
-        android:text="Already have an account?"
-        android:textColor="#000000" />
+        android:layout_marginTop="50dp"
+        android:text="Sign Up" />
 
     <Button
         android:background="@android:color/transparent"
         android:layout_height="36dp"
         android:layout_width="122dp"
-        android:layout_marginTop="480dp"
-        android:layout_marginLeft="130dp"
-        android:id="@+id/logInButton"
+        android:id="@+id/logIn"
         android:textColor="#313b32"
+        android:layout_marginTop="20dp"
         android:text="LOGIN"/>
 
-</RelativeLayout>
+</LinearLayout>
