--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,102 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bluebackground"
+    android:background="@color/vampire"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".UserProfile">
 
-    <ImageView
-        android:id="@+id/imageView18"
-        android:layout_width="138dp"
-        android:layout_height="142dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="123dp"
-        android:layout_marginLeft="123dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="123dp"
-        android:layout_marginRight="123dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profile" />
+        <ImageView
+            android:id="@+id/imageView18"
+            android:layout_width="138dp"
+            android:layout_height="142dp"
+            app:srcCompat="@drawable/profile" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/imageView18"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="123dp"
-        android:layout_marginLeft="123dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="118dp"
-        android:layout_marginRight="118dp"
-        android:layout_marginBottom="57dp"
-        android:text="Simon Delprado"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/button45"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView18" />
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Simon Delprado"
+            android:textColor="#000000"
+            android:textSize="20dp" />
 
-    <ImageView
-        android:id="@+id/imageView25"
-        android:layout_width="match_parent"
-        android:layout_height="112dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button50"
-        app:srcCompat="@drawable/medicalbackground" />
 
-    <Button
-        android:id="@+id/button45"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="57dp"
-        android:background="#f9f1f1"
-        android:text="Activities"
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        <Button
+            android:id="@+id/button45"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="#f9f1f1"
+            android:text="Activities"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button49"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_below="@+id/view2"
-        android:background="#f9f1f1"
-        android:text="Information"
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button45" />
+        <Button
+            android:id="@+id/button49"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="#f9f1f1"
+            android:text="Information"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button50"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_above="@+id/imageView25"
-        android:background="#f9f1f1"
-        android:text="Archive"
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button49" />
+        <Button
+            android:id="@+id/button50"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="#f9f1f1"
+            android:text="Archive"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:textStyle="bold" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
