--- a/app/src/main/res/layout/pest_control_layout.xml
+++ b/app/src/main/res/layout/pest_control_layout.xml
@@ -15,7 +15,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/pest_service_name"
+            android:id="@+id/pest_control_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-condensed"
