--- a/app/src/main/res/layout/activity_insect_family_list.xml
+++ b/app/src/main/res/layout/activity_insect_family_list.xml
@@ -7,6 +7,7 @@
     android:gravity="top|fill_vertical"
     android:orientation="vertical"
     android:padding="16dp"
+    android:id="@+id/insectfamilylist_layout"
     tools:context=".InsectFamilyList">
     
     <EditText
