--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -64,6 +64,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/fontstyleTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/light"
@@ -88,6 +89,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/fontsizeTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/light"
