--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -10,26 +10,25 @@
     tools:context=".UserProfile">
 
         <ImageView
-            android:id="@+id/imageView18"
-            android:layout_width="138dp"
-            android:layout_height="142dp"
+            android:id="@+id/profileImage"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             app:srcCompat="@drawable/profile" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/profileName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Simon Delprado"
-            android:textColor="#000000"
+            android:textColor="@color/light"
             android:textSize="20dp" />
 
-
         <Button
-            android:id="@+id/button45"
+            android:id="@+id/changeProfilePic"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="#f9f1f1"
-            android:text="Activities"
+            android:text="Change Profile Picture"
             android:textColor="#000000"
             android:textSize="15dp"
             android:textStyle="bold" />
@@ -39,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="#f9f1f1"
-            android:text="Information"
+            android:text="Bite Scan History"
             android:textColor="#000000"
             android:textSize="15dp"
             android:textStyle="bold" />
@@ -49,7 +48,17 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:background="#f9f1f1"
-            android:text="Archive"
+            android:text="Insect Scan History"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/saveButton"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:background="#f9f1f1"
+            android:text="Save"
             android:textColor="#000000"
             android:textSize="15dp"
             android:textStyle="bold" />
